# Climate_Risk_Project_SWI_MS_A

./: .gitignore  README.md  data_processing.ipynb  fonction.py  main.py  pyproject.toml
Contenu_pedagogique/TP-SpatialStats/: TP-StatsSpatiales.ipynb
Contenu_pedagogique/TP-SpatialStats/.ipynb_checkpoints/: TP-StatsSpatiales-checkpoint.ipynb
Contenu_pedagogique/TP-SpatialStats/files/: grilleKm.txt  simulation.txt  stationsKm.txt
Contenu_pedagogique/geopandas-tutorial/: geopandas-1.ipynb  geopandas-2.ipynb  geopandas-5.ipynb  neighborhood_access_index.geojson
